# Hust-NetworkPrograming-Quizzizz

./: .gitignore  .gitmodules  LICENSE  README.md  client.js  package.json  pnpm-lock.yaml
Client/: .eslintrc.js  .gitignore  .prettierrc  CMakeLists.txt  README.md  index.html  jest.config.cjs  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
Client/src/: App.tsx  MainWindow.cpp  MainWindow.h  RootComponent.tsx  animations.css  index.css  main.cpp  serviceWorker.ts
Client/src/__tests__/pages/: NotFoundPage.test.tsx
Client/src/components/: DateDisplay.tsx  Footer.tsx  Header.tsx  Navbar.tsx  Navigation.tsx  SessionWarning.tsx  ThemePicker.tsx  ThemeToggle.tsx
Client/src/components/common/: AnimationOnScroll.tsx  CountDown.tsx  Dropdown.tsx  Modal.tsx  MultiSelect.tsx  Slider.tsx  Snowfall.tsx
Client/src/contexts/: AuthContext.tsx
Client/src/guards/: AuthGuard.tsx  GuestGuard.tsx  RoleBasedGuard.tsx
Client/src/layouts/: AuthLayout.tsx  GuestLayout.tsx  QuizLayout.tsx
Client/src/pages/: Dashboard.tsx  DashboardPage.tsx  HomePage.tsx  NotFoundPage.tsx
Client/src/pages/Auth/: Login.tsx  LoginPage.tsx  ProfilePage.tsx  Register.tsx  RegisterPage.tsx
Client/src/pages/Error/: ForbiddenPage.tsx  (+1 more)
Client/src/resources/: common-constants.ts  routes-constants.ts
Client/src/routes/: Router.tsx
Client/src/services/: question.ts  quiz.ts  room.ts  socket.ts  user.ts  webSocket.ts
Client/src/types/: reducers.ts  services.ts
Client/src/utility/: customAxios.ts  functions.ts
Proxy/: package.json  proxy.js
Server/: CMakeLists.txt  Dev.md
Server/src/: integrated_schema.sql  main.cpp
Server/src/fcp/: header.h  request.h  response.h
Server/src/fcp/core/: context.cpp  context.h  database.cpp  database.h  server.h
Server/src/fcp/message/: header.h  message.h  request.h  response.h
Server/src/handlers/: AuthController.h  QuestionController.cpp  QuestionController.h  TestController.h
Server/src/handlers/auth/: Account.h  AuthController.h
Server/src/models/: Account.h  Question.cpp  Question.h  Test.h  UserSession.h
Server/src/services/: AuthService.h  QuestionService.cpp  QuestionService.h  TestService.h
Server/src/services/utils/: password.h
Server/src/utils/: cstr_collector.h
(+23 files in other folders)
